HTML/_examples/_text-styling/2.0.0/ex2.md
---
layout: [example, demo]
permalink: ":layout/"
weight: "-0"
brand: [Brand]
js: false
svg: false
---

<strong>Paragraph</strong>

<p>
	I&rsquo;m a basic paragraph. I provide my own margin bottom to space paragraphs so you don&rsquo;t need to use paragraph returns to add space.
	If you&rsquo;re copying and pasting text from some word processing software be sure to remove unnecessary formating.<br>

	When you place <a href="?">a link</a> inside a paragraph of text this is what it looks like. Avoid using too many long
	links in your paragraphs. It can become difficult to read and can start to look like a Christmas tree.
</p>

<hr>
<strong>Small</strong>

<p>
	The small element represents so-called “small print” such as caveats. <small>I&rsquo;m a caveat.</small> Don&rsquo;t confuse me with physically small text
	as this would be semantically incorrect.
</p>

<hr>
<strong>Strong</strong>

<p>
	I&rsquo;m used for emphasising a snippet of text with a heavier font-weight like this <strong>Look how strong I am</strong> and I haven&rsquo;t even used
	the b tag. Marvellous!
</p>

<hr>
<strong>Emphasis</strong>

<p>
	I&rsquo;m used for emphasising a snippet of text with italics like this <em>Look at me I&rsquo;ve been emphasised</em> and I haven&rsquo;t even used i tag.
</p>

<hr>
<strong>Mark</strong>

<p>
	In this text we have a <mark>section we would like to highlight</mark> from the rest of the text.
</p>

<hr>
<strong>Del/Ins</strong>

<p>
	Sometimes we make changes to <del>someone</del> <ins>something</ins> and this is how you mark that up in HTML.
</p>